--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,15 +10,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
-        php: [8.1, 8.0, 7.4, 7.3]
+        php: [^8.2]
         laravel: [^8.0, ^9.0]
-        exclude:
-          - php: 7.3
-            laravel: '^9.0'
-          - php: 7.4
-            laravel: '^9.0'
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }}
 
