--- a/composer.json
+++ b/composer.json
@@ -17,16 +17,11 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0|^8.1|^8.2",
-        "illuminate/database": "^8.12|^9.0|^10.0",
-        "illuminate/events": "^8.12|^9.0|^10.0",
-        "illuminate/support": "^8.12|^9.0|^10.0",
-        "visus/cuid2": "^4.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "Parables\\Cuid\\": "src/"
-        }
+        "php": ">=7.3",
+        "illuminate/database": ">=8.12",
+        "illuminate/events": ">=8.12",
+        "illuminate/support": ">=8.12",
+        "visus/cuid2": ">=4.0"
     },
     "require-dev": {
         "laravel/legacy-factories": "^1.0.4",
@@ -34,17 +29,22 @@
         "orchestra/testbench": "^6.0|^7.0",
         "phpunit/phpunit": "^9.3"
     },
+    "autoload": {
+        "psr-4": {
+            "Parables\\Cuid\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
     "scripts": {
         "changelog": "conventional-changelog",
         "release": "conventional-changelog --commit",
         "release:patch": "conventional-changelog --patch --commit",
         "release:minor": "conventional-changelog --minor --commit",
         "release:major": "conventional-changelog --major --commit"
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
