--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
         }
     ],
     "require": {
-        "php": ">=7.3",
-        "illuminate/database": ">=8.12",
-        "illuminate/events": ">=8.12",
-        "illuminate/support": ">=8.12",
-        "visus/cuid2": ">=4.0"
+        "php": "^8.1",
+        "illuminate/database": "^10.0|^11.0",
+        "illuminate/events": "^10.0|^11.0",
+        "illuminate/support": "^10.0|^11.0",
+        "visus/cuid2": "^4.0"
     },
     "require-dev": {
         "laravel/legacy-factories": "^1.0.4",
